examples/test/testpolicy18762.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18762
  namespace: namespace469
spec:
  podSelector:
    matchLabels:
      key40: value36
      key4: value22
      key15: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value31
      podSelector:
        matchLabels:
          key17: value24
          key24: value42
